--- a/package.json
+++ b/package.json
@@ -1,15 +1,30 @@
 {
-  "name": "side-bar-test",
+  "name": "DeltaRay-MIS",
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "start": "./dist/index.js",
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "backend": "json-server --watch db.json --port 5000"
   },
   "dependencies": {
+    "@popperjs/core": "^2.10.2",
+    "axios": "^0.24.0",
+    "azure-cli": "^0.10.20",
+    "bootstrap": "^5.1.3",
+    "chart.js": "^2.9.4",
     "core-js": "^3.6.5",
-    "vue": "^3.0.0"
+    "fecha": "^4.2.1",
+    "graphql-ws": "^5.5.5",
+    "jl-datatable": "^1.0.3",
+    "json-server": "^0.17.0",
+    "jspdf": "^2.4.0",
+    "subscriptions-transport-ws": "^0.11.0",
+    "vue": "^3.0.0",
+    "vue-router": "^4.0.12",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
@@ -32,7 +47,9 @@
     "parserOptions": {
       "parser": "babel-eslint"
     },
-    "rules": {}
+    "rules": {
+      "no-unused-vars": "off"
+    }
   },
   "browserslist": [
     "> 1%",
